crates/test-ui/ui/invalid_msg_send_super.stderr
error[E0433]: too many leading `super` keywords within `crate`
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super, init] };
  |                                    ^^^^^ this `super` would go above the crate root

error[E0433]: too many leading `super` keywords within `crate`
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super(), init] };
  |                                    ^^^^^ this `super` would go above the crate root

error[E0433]: too many leading `super` keywords within `crate`
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super(obj,), init] };
  |                                    ^^^^^ this `super` would go above the crate root

error[E0433]: too many leading `super` keywords within `crate`
 --> ui/invalid_msg_send_super.rs
  |
  |     let _: () = unsafe { msg_send![super(obj, superclass,), init] };
  |                                    ^^^^^ this `super` would go above the crate root
